bottom navbar now has links, most likely use

--- a/www/html/navbar-bottom.html
+++ b/www/html/navbar-bottom.html
@@ -1,5 +1,9 @@
 <div class="navbar navbar-app navbar-absolute-bottom">
     <div class="navbar-brand navbar-brand-center">
-        Bottom Navbar
+        <div class="btn-group justified">
+            <a ui-sref="welcome"><i class="fa fa-home"></i></a>
+            <a ui-sref="map"><i class="fa fa-map-marker"></i></a>
+            <a ui-sref="about"><i class="fa fa-info-circle"></i></a>
+        </div>
     </div>
 </div>
