bottom navbar now graphical buttons

--- a/www/html/navbar-bottom.html
+++ b/www/html/navbar-bottom.html
@@ -1,9 +1,23 @@
 <div class="navbar navbar-app navbar-absolute-bottom">
     <div class="navbar-brand navbar-brand-center">
         <div class="btn-group justified">
-            <a ui-sref="welcome"><i class="fa fa-home"></i></a>
-            <a ui-sref="map"><i class="fa fa-map-marker"></i></a>
-            <a ui-sref="about"><i class="fa fa-info-circle"></i></a>
+            <a ui-sref="welcome">
+                <i class="fa fa-home"></i>
+                <br/>
+                Home
+            </a>
+
+            <a ui-sref="map">
+                <i class="fa fa-map-marker"></i>
+                <br/>
+                Map
+            </a>
+
+            <a ui-sref="about">
+                <i class="fa fa-info-circle"></i>
+                <br/>
+                About
+            </a>
         </div>
     </div>
 </div>
