added leaflet lib + breakup controller.js + stymied by lazy loading

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,10 @@
         <script src="node_modules/mobile-angular-ui/dist/js/mobile-angular-ui.js"></script>
         <script src="node_modules/mobile-angular-ui/dist/js/mobile-angular-ui.gestures.js"></script>
 
+        <!-- Leaflet -->
+        <script src="node_modules/leaflet/dist/leaflet-src.js"></script>
+        <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
+
         <!-- our own awesomesauce -->
         <script src="bundle.js"></script>
         <link rel="stylesheet" type="text/css" href="bundle.css" />
