rework of page-changing concept

--- a/www/html/navbar-bottom.html
+++ b/www/html/navbar-bottom.html
@@ -1,19 +1,19 @@
 <div class="navbar navbar-app navbar-absolute-bottom">
     <div class="navbar-brand navbar-brand-center">
         <div class="btn-group justified">
-            <a ui-sref="welcome">
+            <a href ui-set="{whichPage: 'welcome'}">
                 <i class="fa fa-home"></i>
                 <br/>
                 Home
             </a>
 
-            <a ui-sref="map">
+            <a href ui-set="{whichPage: 'map'}">
                 <i class="fa fa-map-marker"></i>
                 <br/>
                 Map
             </a>
 
-            <a ui-sref="about">
+            <a href ui-set="{whichPage: 'about'}">
                 <i class="fa fa-info-circle"></i>
                 <br/>
                 About
