--- a/www/html/map.html
+++ b/www/html/map.html
@@ -1,4 +1,4 @@
 <!-- Leaflet map in a panel all by itself -->
-<!-- note that we override ui-swipe-left and ui-swipe-right to do nothing; body element has swipe handlers to open/close Sidebar and that gets annoying -->
+<!-- note that we override ui-swipe-left and ui-swipe-right to do nothing; parent element has -->
 <div class="map" id="map-map" ui-swipe-left="false" ui-swipe-right="false">
 </div>
