--- a/www/html/navbar-bottom.html
+++ b/www/html/navbar-bottom.html
@@ -1,19 +1,19 @@
 <div class="navbar navbar-app navbar-absolute-bottom">
     <div class="navbar-brand navbar-brand-center">
         <div class="btn-group justified">
-            <a href ng-click="selectPage('welcome');">
+            <a href ng-click="app.selectPage('welcome');">
                 <i class="fa fa-home"></i>
                 <br/>
                 Home
             </a>
 
-            <a href ng-click="selectPage('map');">
+            <a href ng-click="app.selectPage('map');">
                 <i class="fa fa-map-marker"></i>
                 <br/>
                 Map
             </a>
 
-            <a href ng-click="selectPage('about');">
+            <a href ng-click="app.selectPage('about');">
                 <i class="fa fa-info-circle"></i>
                 <br/>
                 About
