--- a/www/html/sidebar.html
+++ b/www/html/sidebar.html
@@ -3,9 +3,9 @@
         <h1 class="scrollable-header app-name">Mobile Map Starter</h1>
         <div class="scrollable-content">
             <div class="list-group" ui-turn-off="uiSidebarLeft">
-                <a class="list-group-item" href ng-click="selectPage('welcome');">Home<i class="fa fa-chevron-right pull-right"></i></a>
-                <a class="list-group-item" href ng-click="selectPage('map');">Map <i class="fa fa-chevron-right pull-right"></i></a>
-                <a class="list-group-item" href ng-click="selectPage('about');">About <i class="fa fa-chevron-right pull-right"></i></a>
+                <a class="list-group-item" href ng-click="app.selectPage('welcome');">Home<i class="fa fa-chevron-right pull-right"></i></a>
+                <a class="list-group-item" href ng-click="app.selectPage('map');">Map <i class="fa fa-chevron-right pull-right"></i></a>
+                <a class="list-group-item" href ng-click="app.selectPage('about');">About <i class="fa fa-chevron-right pull-right"></i></a>
             </div>
         </div>
     </div>
