--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
          ngRoute and ui.router lazy-load and auto-unload pages not currently in view, which is poison for maps and other expensive behaviors
          so we load them all into DOM, then show the relevant selectedPage
     -->
-    <body ng-app="mobileApp" ng-controller="appController" ui-prevent-touchmove-defaults ui-shared-state="whichPage">
+    <body ng-app="mobileApp" ng-controller="appController as app" ui-prevent-touchmove-defaults ui-shared-state="whichPage">
         <!-- sidebar -->
         <span ng-include="'html/sidebar.html'"></span>
 
@@ -39,10 +39,10 @@
             <span ng-include="'html/navbar-bottom.html'"></span>
 
             <div class="app-body">
-                <span ng-show="selectedPage == 'welcome'" ng-include="'html/welcome.html'"></span>
-                <span ng-show="selectedPage == 'about'" ng-include="'html/about.html'"></span>
-                <span ng-show="selectedPage == 'map'" ng-include="'html/map.html'"></span>
-                <span ng-show="selectedPage == 'mapsettings'" ng-include="'html/mapsettings.html'"></span>
+                <span ng-show="app.selectedPage == 'welcome'" ng-include="'html/welcome.html'"></span>
+                <span ng-show="app.selectedPage == 'about'" ng-include="'html/about.html'"></span>
+                <span ng-show="app.selectedPage == 'map'" ng-include="'html/map.html'"></span>
+                <span ng-show="app.selectedPage == 'mapsettings'" ng-include="'html/mapsettings.html'"></span>
             </div>
 
         </div><!-- div.app wrapper -->
