fixes #6 About page real content

--- a/www/html/about.html
+++ b/www/html/about.html
@@ -1,17 +1,18 @@
 <div class="scrollable">
     <div class="scrollable-content">
         <div class="section">
-            <h1>About This App</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dolor mi, mattis at ipsum posuere, efficitur suscipit diam. Pellentesque bibendum felis at ante dignissim posuere. Quisque vel leo tristique leo rutrum aliquam et sed elit. Nullam viverra dui tortor, eu interdum nisi hendrerit ac. Pellentesque pellentesque dolor a augue cursus, in faucibus risus posuere. Nullam in posuere lacus. Suspendisse ac lacus elit. Integer at tellus et lectus lobortis vestibulum at ac risus. Pellentesque a orci vitae diam scelerisque imperdiet sodales vitae est. Donec aliquet, odio porta vehicula iaculis, nulla ligula ornare quam, et hendrerit mi nisl tempus ligula. Nunc malesuada in mi non fringilla. Morbi et lobortis felis.</p>
-            <p>Nullam scelerisque auctor consequat. Sed tristique sapien ultricies mi commodo, vitae ultricies justo sagittis. Quisque sollicitudin nisl molestie erat finibus, in hendrerit mauris facilisis. Aenean consectetur commodo leo. Mauris ut posuere dui. Aliquam maximus augue lobortis risus ullamcorper malesuada non quis massa. Praesent vitae lacinia mauris. Curabitur a rhoncus nisi. Mauris eget nibh facilisis velit viverra ultricies. Curabitur massa eros, suscipit in laoreet quis, molestie non nunc. Vestibulum ut ornare turpis, sit amet dapibus sem. Cras eleifend justo vitae mi tempor mattis.</p>
-            <p>Maecenas eu pretium sem. Duis interdum molestie lacus, commodo mollis sem gravida in. Fusce viverra mauris neque, quis ultricies nulla vestibulum eget. Donec sem odio, sollicitudin ac velit sed, iaculis porttitor mauris. Donec ligula ex, consectetur eget ornare sit amet, accumsan non lectus. Curabitur laoreet ac odio eu volutpat. Sed in nisi urna. Phasellus suscipit metus leo, quis accumsan erat venenatis non. Duis bibendum eros nec magna efficitur ullamcorper. In a sodales magna, convallis ultricies purus. Phasellus rhoncus quam ornare sagittis lobortis.</p>
-
-            <h1>Thanks and Credits</h1>
-            <p>Proin iaculis lacinia arcu ac ullamcorper. Morbi vulputate tellus ac augue molestie vestibulum. In pretium, ex nec efficitur ornare, dolor nisl bibendum risus, id tristique est purus ut purus. Etiam nec tellus finibus, rutrum augue eu, placerat neque. Vestibulum quis justo elit. Nunc nisl magna, eleifend sit amet justo id, tristique lobortis nisl. Phasellus augue augue, posuere non tortor vel, interdum porta lorem. Maecenas vitae malesuada arcu. Integer eu turpis nisl. Vivamus eleifend urna sapien, quis ornare orci vestibulum eu.</p>
-            <p>Maecenas eu pretium sem. Duis interdum molestie lacus, commodo mollis sem gravida in. Fusce viverra mauris neque, quis ultricies nulla vestibulum eget. Donec sem odio, sollicitudin ac velit sed, iaculis porttitor mauris. Donec ligula ex, consectetur eget ornare sit amet, accumsan non lectus. Curabitur laoreet ac odio eu volutpat. Sed in nisi urna. Phasellus suscipit metus leo, quis accumsan erat venenatis non. Duis bibendum eros nec magna efficitur ullamcorper. In a sodales magna, convallis ultricies purus. Phasellus rhoncus quam ornare sagittis lobortis.</p>
-
-            <h1>Licenses</h1>
-            <p>Donec fringilla arcu id diam ultrices, sit amet scelerisque dui venenatis. Vivamus hendrerit, ex quis dapibus tincidunt, erat elit viverra nisl, id varius libero ligula tempor felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum ut erat feugiat, laoreet est at, aliquet velit. Integer hendrerit porttitor ligula, non porttitor eros ullamcorper quis. Suspendisse felis nunc, vehicula quis diam lobortis, sodales semper purus. Maecenas convallis nunc dolor, eu bibendum urna elementum faucibus. Praesent rhoncus, risus in vehicula maximus, dolor purus tincidunt libero, in maximus est orci eu urna. Etiam laoreet enim sed nunc dictum, non accumsan leo auctor. Aenean iaculis condimentum lobortis. Duis consectetur, nulla in sollicitudin ultricies, purus diam finibus leo, vel suscipit elit lorem in elit.</p>
+            <h1>About MobileMapStarter</h1>
+            <p>Development of MobileMapStarter is funded by <a target="_blank" href="http://www.greeninfo.org/">GreenInfo Network</a>.</p>
+            <p>The Github repository for MobileMapStarter is <a targer="_blank" href="https://github.com/gregallensworth/MobileMapStarter2/">https://github.com/gregallensworth/MobileMapStarter2/</a> There, you may find the most recent release, report bugs, request new features, or create and submit pull requests with your suggestions.</p>
+            <p>MobileMapStarter is based on these techologies:</p>
+            <ul>
+                <li><a target="_blank" href="https://cordova.apache.org/">Apache Cordova</a> - The go-to framework for creating hybrid mobile apps.</li>
+                <li><a target="_blank" href="https://angularjs.org/">Angular</a> - Programming framework for tying HTML behaviors to data and state changes.</li>
+                <li><a target="_blank" href="http://getbootstrap.com/2.3.2/">Bootstrap</a> - Styling framework for buttons, input widgets, navbars, and more.</li>
+                <li><a target="_blank" href="http://mobileangularui.com/">mobile-angular-ui</a> - A kit which ties together Angular and Bootstrap, and provides additional UI elements and behaviors.</li>
+                <li><a target="_blank" href="http://leafletjs.com/">Leaflet</a> - The mapping toolkit.</li>
+                <li><a target="_blank" href="https://livingatlas.arcgis.com/en/">ESRI Basemap Services</a> - The stock basemaps configured in MobileMapStarter are Powered by Esri.</li>
+            </ul>
         </div>
     </div>
 </div>
