#2 Map Settings minor doc + style tweak

--- a/www/html/mapsettings.html
+++ b/www/html/mapsettings.html
@@ -15,7 +15,8 @@
             <h2>Map Tracking</h2>
             <div class="form-group">
                 Center the map on your location
-                <toggle ng-model="app.mapFollowMyLocation" on="Yes" off="No"></toggle>
+                <toggle ng-model="app.mapFollowMyLocation" on="Yes" off="No" onstyle="btn-primary" offstyle="btn-default" size="btn-sm"></toggle>
+                <!-- Toggle is actually a pretty Bootstrap .btn  http://ziscloud.github.io/angular-bootstrap-toggle/ -->
             </div>
 
         </div>
