#3 geocoder added to map, sweet

--- a/www/html/about.html
+++ b/www/html/about.html
@@ -11,6 +11,8 @@
                 <li><a target="_blank" href="http://getbootstrap.com/2.3.2/">Bootstrap</a> - Styling framework for buttons, input widgets, navbars, and more.</li>
                 <li><a target="_blank" href="http://mobileangularui.com/">mobile-angular-ui</a> - A kit which ties together Angular and Bootstrap, and provides additional UI elements and behaviors.</li>
                 <li><a target="_blank" href="http://leafletjs.com/">Leaflet</a> - The mapping toolkit.</li>
+                <li><a target="_blank" href="https://github.com/perliedman/leaflet-control-geocoder">leaflet-control-geocoder</a> - The geocoder included in the app.</li>
+                <li><a target="_blank" href="http://ziscloud.github.io/angular-bootstrap-toggle/">angular-bootstrap-toggle</a> - on Map Settings, that nice toggle control.</li>
                 <li><a target="_blank" href="https://livingatlas.arcgis.com/en/">ESRI Basemap Services</a> - Some of the stock basemaps configured in MobileMapStarter are Powered by Esri.</li>
                 <li><a target="_blank" href="https://www.openstreetmap.org/">OpenStreetMap</a> - Some of the stock basemaps configured in MobileMapStarter are powered by OpenStreetMap.</li>
             </ul>
