--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,12 @@
         <script src="node_modules/mobile-angular-ui/dist/js/mobile-angular-ui.js"></script>
         <script src="node_modules/mobile-angular-ui/dist/js/mobile-angular-ui.gestures.js"></script>
 
-        <!-- Leaflet -->
+        <!-- Leaflet and custom controls -->
         <script src="node_modules/leaflet/dist/leaflet-src.js"></script>
         <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
+
+        <link rel="stylesheet" href="node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+        <script src="node_modules/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
         <!-- UI addons and custom widgets -->
         <script src="node_modules/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.js"></script>
