#11 L.TileLayer.Cordova installed and deviceready reworked for startup

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
         <link rel="stylesheet" href="libs/leaflet-control-geocoder/dist/Control.Geocoder.css" />
         <script src="libs/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
+        <script src="libs/leaflet-tilelayer-cordova/leaflet-tilelayer-cordova.js"></script>
+
         <!-- UI addons and custom widgets -->
         <script src="node_modules/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.js"></script>
         <link rel="stylesheet" href="node_modules/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.css" />
