--- a/www/index.html
+++ b/www/index.html
@@ -59,20 +59,19 @@
         <!-- Modals and Overlays will be drawn here, and defined below -->
         <div ui-yield-to="modals"></div>
 
-
         <div ui-content-for="modals">
-            <div class="modal modal-overlay" ng-if="globalmodal">
+            <div class="modal modal-overlay" ng-if="app.globalmodal">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
                             <button class="close" ng-click="app.modalMessageClear();">&times;</button>
-                            <h3 class="modal-title">{{ globalmodal.title }}</h3>
+                            <h3 class="modal-title">{{ app.globalmodal.title }}</h3>
                         </div>
                         <div class="modal-body">
-                            <p>{{ globalmodal.message }}</p>
+                            <p>{{ app.globalmodal.message }}</p>
                         </div>
                         <div class="modal-footer">
-                            <button ng-click="app.modalMessageClear();" class="btn btn-primary btn-lg">{{ globalmodal.closebutton }}</button>
+                            <button ng-click="app.modalMessageClear();" class="btn btn-primary btn-lg">{{ app.globalmodal.closebutton }}</button>
                         </div>
                     </div>
                 </div>
