fixes #14 about page 'targer' typo

--- a/www/html/about.html
+++ b/www/html/about.html
@@ -3,7 +3,7 @@
         <div class="section">
             <h1>About MobileMapStarter</h1>
             <p>Development of MobileMapStarter is funded by <a target="_blank" href="http://www.greeninfo.org/">GreenInfo Network</a>.</p>
-            <p>The Github repository for MobileMapStarter is <a targer="_blank" href="https://github.com/gregallensworth/MobileMapStarter2/">https://github.com/gregallensworth/MobileMapStarter2/</a> There, you may find the most recent release, report bugs, request new features, or create and submit pull requests with your suggestions.</p>
+            <p>The Github repository for MobileMapStarter is <a target="_blank" href="https://github.com/gregallensworth/MobileMapStarter2/">https://github.com/gregallensworth/MobileMapStarter2/</a> There, you may find the most recent release, report bugs, request new features, or create and submit pull requests with your suggestions.</p>
             <p>MobileMapStarter is based on these techologies:</p>
             <ul>
                 <li><a target="_blank" href="https://cordova.apache.org/">Apache Cordova</a> - The go-to framework for creating hybrid mobile apps.</li>
