#18 Starter basemaps changed out

--- a/www/html/about.html
+++ b/www/html/about.html
@@ -15,7 +15,7 @@
                 <li><a target="_blank" href="http://ziscloud.github.io/angular-bootstrap-toggle/">angular-bootstrap-toggle</a> - on Map Settings, that nice toggle control.</li>
                 <li><a target="_blank" href="https://github.com/gregallensworth/L.TileLayer.Cordova/blob/master/README.md">L.TileLayer.Cordova</a> - Leaflet TileLayer with offline caching to device storage.</li>
                 <li><a target="_blank" href="https://livingatlas.arcgis.com/en/">ESRI Basemap Services</a> - Some of the stock basemaps configured in MobileMapStarter are Powered by Esri.</li>
-                <li><a target="_blank" href="https://www.openstreetmap.org/">OpenStreetMap</a> - Some of the stock basemaps configured in MobileMapStarter are powered by OpenStreetMap.</li>
+                <li><a target="_blank" href="https://opentopomap.org/about">OpenTopoMap</a> - Some of the stock basemaps configured in MobileMapStarter are powered by OpenTopoMap.</li>
             </ul>
         </div>
     </div>
